--- a/src/pages/About/style.scss
+++ b/src/pages/About/style.scss
@@ -42,7 +42,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 1025px;
+  width: 80%;
   margin: 0 auto;
-  padding: 0 1rem;
+  padding: 0;
 }
