--- a/src/pages/Logements/style.scss
+++ b/src/pages/Logements/style.scss
@@ -1,10 +1,6 @@
 /***** LOGEMENTS *****/
 
 .logement {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-sizing: border-box;
   padding: 0rem 5rem 1.5rem 5rem;
 
   .logementDetails {
@@ -12,33 +8,97 @@
     flex-direction: column;
     width: 100%;
 
-    .logementTitle {
-      color: #ff6060;
-      font-size: 36px;
-      font-weight: 500;
-      line-height: 51px;
-      margin: 2rem 0rem 0rem 0rem;
-    }
-
-    .logementLocation {
-      color: #000000;
-      font-size: 18px;
-      font-weight: 500;
-      line-height: 25px;
-      margin: 0rem 0rem 1rem 0rem;
-    }
-
-    .logementTags {
+    .logementMainDetails {
       display: flex;
-      gap: 10px;
+      justify-content: space-between;
+      align-items: center;
 
-      .tag {
-        padding: 0.3rem 2rem;
-        background-color: #ff6060;
-        border-radius: 10px;
-        color: white;
-        font-size: 14px;
-        font-weight: 700;
+      .logementTitleLocationTagsContainer {
+        .logementTitle {
+          color: #ff6060;
+          font-size: 36px;
+          font-weight: 500;
+          line-height: 51px;
+          margin: 2rem 0rem 0rem 0rem;
+        }
+
+        .logementLocation {
+          color: #000000;
+          font-size: 18px;
+          font-weight: 500;
+          line-height: 25px;
+          margin: 0rem 0rem 1rem 0rem;
+        }
+
+        .logementTags {
+          display: flex;
+          gap: 10px;
+
+          .tag {
+            padding: 0.3rem 2rem;
+            background-color: #ff6060;
+            border-radius: 10px;
+            color: white;
+            font-size: 14px;
+            font-weight: 700;
+          }
+        }
+      }
+
+      .logementHostRatingContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        gap: 20px;
+        margin-top: 1.55rem;
+
+        .logementHost {
+          display: flex;
+          align-items: center;
+          text-align: right;
+
+          .hostName {
+            display: flex;
+            flex-direction: column;
+            margin-right: 0.5rem;
+            color: #ff6060;
+            font-size: 17px;
+            font-weight: 500;
+          }
+
+          .hostPicture {
+            width: 64px;
+            height: 64px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+        }
+
+        .logementRating {
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+
+          .star {
+            width: 32px;
+            height: 32px;
+            margin-left: 0.2rem;
+          }
+        }
+      }
+    }
+
+    .collapses {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 2rem;
+
+      .collapse {
+        width: 48%;
+
+        .collapse-header h3 {
+          font-size: 18px;
+        }
       }
     }
   }
